@@ -1,3 +1,8 @@
+2008-11-16  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* examples/:
+	* Makefile.am: Include some example programs.
+
 2008-11-14  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/compiler.c: Don't stop parsing a comment if a comma is
